--- a/config.ini
+++ b/config.ini
@@ -7,8 +7,8 @@ app_edition = 2.3.1
 [User]
 token = 
 device_id =
-map_key =
-device_name = Xiaomi(Mi10)
+map_key =05299060ab3a6592175f7ee09b879302
+device_name = Huawei(Pura70)
 sys_edition = 12
 
 [Run]
